# cairn-security-agent-audit

./: .gitignore  LICENSE  OPEN_CORE.md  QUICKSTART.md  README.md  TERMS.md  cairn_audit_agent_logs.py  cairn_demo.py  cairn_inspect_log_schema.py  cairn_pilot_from_raw_logs.py  cairn_security_audit_ui.py  demo.sh  pyproject.toml
cairn_security_agent_audit/: __init__.py
cairn_security_agent_audit/samples/: pentest_trace_sample.jsonl
docs/: CACHE_CONTROL_FOR_SECURITY_AGENTS.md  LOG_FORMATS.md  ONE_REDACTED_EVENT.md  WHAT_TO_EXPECT.md
examples/autopenbench/: report.html  summary.json  summary.md
pilot/: ingest_agent_trace.py
